<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/badge_row_vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <LinearLayout
            android:id="@+id/badge_row_number_of_beats_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="20dp"
            app:layout_constraintEnd_toStartOf="@id/badge_row_vertical_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/badge_row_x_number_of_beats_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/polyrhythm_default_x_beats"
                android:textColor="@color/xRhythmColor"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/badge_row_number_of_beats_picker_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="6dp"
                android:text="@string/polyrhythm_separator"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/badge_row_y_number_of_beats_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/polyrhythm_default_y_beats"
                android:textColor="@color/yRhythmColor"
                android:textSize="50sp" />

        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_marginVertical="20dp"
            android:background="?attr/colorOnBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/badge_row_vertical_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginVertical="8dp"
            android:columnCount="2"
            android:rowCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/badge_row_vertical_guideline"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/badge_row_impossible_mode_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="start|center_vertical"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/badge_row_impossible_mode_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/mode_impossible_description"
                    android:src="@drawable/ic_fire"
                    android:tint="?attr/colorOnBackground" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/badge_row_impossible_mode_measures"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="12sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/badge_row_impossible_mode_bpm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/yRhythmColor"
                        android:textSize="12sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/badge_row_impossible_mode_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="12sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/badge_row_impossible_mode_incomplete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:alpha="0.3"
                        android:text="@string/incomplete"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/badge_row_hard_mode_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="start|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/badge_row_hard_mode_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/mode_hard_description"
                    android:src="@drawable/ic_accidental_sharp"
                    android:tint="?attr/colorOnBackground" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/badge_row_hard_mode_bpm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/yRhythmColor"
                        android:textSize="12sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/badge_row_hard_mode_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="12sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/badge_row_hard_mode_incomplete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:alpha="0.3"
                        android:text="@string/incomplete"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/badge_row_medium_mode_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="start|center_vertical"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/badge_row_medium_mode_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/mode_medium_description"
                    android:src="@drawable/ic_accidental_natural"
                    android:tint="?attr/colorOnBackground" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/badge_row_medium_mode_bpm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/yRhythmColor"
                        android:textSize="12sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/badge_row_medium_mode_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="12sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/badge_row_medium_mode_incomplete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:alpha="0.3"
                        android:text="@string/incomplete"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/badge_row_easy_mode_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="start|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/badge_row_easy_mode_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/mode_easy_description"
                    android:src="@drawable/ic_accidental_flat"
                    android:tint="?attr/colorOnBackground" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/badge_row_easy_mode_bpm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/yRhythmColor"
                        android:textSize="12sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/badge_row_easy_mode_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="12sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/badge_row_easy_mode_incomplete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:alpha="0.3"
                        android:text="@string/incomplete"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>
        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
