<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".destinations.trainer.TrainerFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/trainer_guideline_above_visualizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/trainer_guideline_above_pads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/trainer_trophies_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:icon="@drawable/ic_trophy"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconTint="?attr/colorOnBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/trainer_premium_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:icon="@drawable/ic_premium"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconTint="?attr/colorOnBackground"
        app:layout_constraintStart_toEndOf="@id/trainer_trophies_button"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/trainer_sounds_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:icon="@drawable/ic_sound"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconTint="?attr/colorOnBackground"
        app:layout_constraintEnd_toStartOf="@id/trainer_change_theme_button"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/trainer_change_theme_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:icon="@drawable/ic_dark_theme"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconTint="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/trainer_mode_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_dropdown"
        app:layout_constraintBottom_toBottomOf="@id/trainer_number_of_beats_picker_layout"
        app:layout_constraintEnd_toStartOf="@id/trainer_number_of_beats_picker_layout"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/trainer_number_of_beats_picker_layout" />

    <LinearLayout
        android:id="@+id/trainer_number_of_beats_picker_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/trainer_bpm_layout"
        app:layout_constraintEnd_toStartOf="@id/trainer_play_stop_button"
        app:layout_constraintStart_toEndOf="@id/trainer_mode_spinner"
        app:layout_constraintTop_toBottomOf="@id/trainer_trophies_button"
        app:layout_constraintVertical_chainStyle="spread">

        <LinearLayout
            android:id="@+id/trainer_x_number_of_beats_picker_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/trainer_x_number_of_beats_increase_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:minWidth="48dp"
                android:padding="0dp"
                android:text="@string/increase_beats_button_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="?attr/colorOnBackground" />

            <TextView
                android:id="@+id/trainer_x_number_of_beats_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/polyrhythm_default_x_beats"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/xRhythmColor"
                android:textSize="50sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/trainer_x_number_of_beats_decrease_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:minWidth="48dp"
                android:padding="0dp"
                android:text="@string/decrease_beats_button_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="?attr/colorOnBackground" />

        </LinearLayout>

        <TextView
            android:id="@+id/trainer_number_of_beats_picker_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/polyrhythm_separator"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/trainer_guideline_above_visualizer"
            app:layout_constraintEnd_toStartOf="@id/trainer_y_number_of_beats_picker_layout"
            app:layout_constraintStart_toEndOf="@id/trainer_x_number_of_beats_picker_layout"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/trainer_y_number_of_beats_picker_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/trainer_y_number_of_beats_increase_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:minWidth="48dp"
                android:padding="0dp"
                android:text="@string/increase_beats_button_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="?attr/colorOnBackground" />

            <TextView
                android:id="@+id/trainer_y_number_of_beats_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/polyrhythm_default_y_beats"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/yRhythmColor"
                android:textSize="50sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/trainer_y_number_of_beats_decrease_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:minWidth="48dp"
                android:padding="0dp"
                android:text="@string/decrease_beats_button_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="?attr/colorOnBackground" />

        </LinearLayout>

    </LinearLayout>

    <!-- TODO MAKE PLAY BUTTON MORE VISIBLE-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/trainer_play_stop_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:icon="@drawable/ic_play"
        app:iconPadding="0dp"
        app:iconSize="60dp"
        app:layout_constraintBottom_toBottomOf="@id/trainer_number_of_beats_picker_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/trainer_number_of_beats_picker_layout"
        app:layout_constraintTop_toTopOf="@id/trainer_number_of_beats_picker_layout" />

    <LinearLayout
        android:id="@+id/trainer_bpm_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/trainer_guideline_above_visualizer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trainer_number_of_beats_picker_layout">

        <SeekBar
            android:id="@+id/trainer_bpm_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:max="270"
            android:progress="50" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/trainer_bpm_tap_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/bpm"
            android:textColor="@color/yRhythmColor"
            android:textSize="16sp"
            app:icon="@drawable/ic_tap"
            app:iconGravity="end"
            app:iconSize="36dp"
            app:iconTint="?attr/colorOnBackground" />

    </LinearLayout>

    <com.jorkoh.polyrhythmtrainer.destinations.trainer.customviews.TrainerView
        android:id="@+id/trainer_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="2:1.2"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/trainer_guideline_above_pads"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trainer_guideline_above_visualizer" />

    <com.jorkoh.polyrhythmtrainer.destinations.trainer.customviews.PadView
        android:id="@+id/trainer_left_pad"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="6dp"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/trainer_right_pad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trainer_guideline_above_pads"
        app:padColor="@color/yRhythmColor"
        app:padPosition="0"
        app:padRippleColor="@color/yRhythmRippleColor" />

    <com.jorkoh.polyrhythmtrainer.destinations.trainer.customviews.PadView
        android:id="@+id/trainer_right_pad"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/trainer_left_pad"
        app:layout_constraintTop_toBottomOf="@id/trainer_guideline_above_pads"
        app:padColor="@color/xRhythmColor"
        app:padPosition="1"
        app:padRippleColor="@color/xRhythmRippleColor" />

</androidx.constraintlayout.widget.ConstraintLayout>